{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 66,
  "lineage": "4636e006-455c-3b51-2657-db35182f22d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017a3350695061866",
            "association_id": "eipassoc-0d6114bf782feaadf",
            "domain": "vpc",
            "id": "eipalloc-017a3350695061866",
            "instance": "i-01814d0e726ca3949",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a38f0469f9651e0b",
            "private_dns": "ip-172-48-15-15.ec2.internal",
            "private_ip": "172.48.15.15",
            "public_dns": "ec2-3-228-160-39.compute-1.amazonaws.com",
            "public_ip": "3.228.160.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_ec2_instance",
            "aws_key_pair.generated_key",
            "aws_security_group.project-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033b95fb8079dc481",
            "arn": "arn:aws:ec2:us-east-1:321371897157:instance/i-01814d0e726ca3949",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01814d0e726ca3949",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hello",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a38f0469f9651e0b",
            "private_dns": "ip-172-48-15-15.ec2.internal",
            "private_ip": "172.48.15.15",
            "public_ip": "18.232.158.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fa34a2b767be10f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e2fee2d9b72e438",
            "tags": {
              "Name": "App-EC2_Instance",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "App-EC2_Instance",
              "createdBy": "JoshuaJosephJefries"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02381f86becbf2f01"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.project-sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:security-group/sg-02381f86becbf2f01",
            "description": "To access windows ec2 instance, RDP port should be added to ingress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enabling all for engress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02381f86becbf2f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enabling HTTP for ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enabling HTTPS for ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Enabling SSH for ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Project_Sec_Group",
            "name_prefix": "",
            "owner_id": "321371897157",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Project_Sec_Group"
            },
            "tags_all": {
              "Name": "Project_Sec_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:internet-gateway/igw-038e313ac3e748f11",
            "id": "igw-038e313ac3e748f11",
            "owner_id": "321371897157",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-038e313ac3e748f11",
            "id": "r-rtb-06f801db8da754e051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f801db8da754e05",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:route-table/rtb-06f801db8da754e05",
            "id": "rtb-06f801db8da754e05",
            "owner_id": "321371897157",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8f2bd91378c23b7",
            "route_table_id": "rtb-06f801db8da754e05",
            "subnet_id": "subnet-03e2fee2d9b72e438"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dc7477895ecc9ae",
            "route_table_id": "rtb-06f801db8da754e05",
            "subnet_id": "subnet-0fe311dc44243c09d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fe1e2faf0946454",
            "route_table_id": "rtb-06f801db8da754e05",
            "subnet_id": "subnet-04a802346dcc1b4d6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab9f5d4b7da180e9",
            "route_table_id": "rtb-06f801db8da754e05",
            "subnet_id": "subnet-087802290f8d226b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:subnet/subnet-03e2fee2d9b72e438",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.48.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e2fee2d9b72e438",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321371897157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:subnet/subnet-0fe311dc44243c09d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.48.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe311dc44243c09d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321371897157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:subnet/subnet-04a802346dcc1b4d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.48.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a802346dcc1b4d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321371897157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:subnet/subnet-087802290f8d226b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.48.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087802290f8d226b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "321371897157",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "vpc_id": "vpc-09e387a7acaea0a36"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:321371897157:vpc/vpc-09e387a7acaea0a36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.48.0.0/16",
            "default_network_acl_id": "acl-003882350ff6afdb0",
            "default_route_table_id": "rtb-06bfa7188015aaaeb",
            "default_security_group_id": "sg-0ea3dd89c0fece2cc",
            "dhcp_options_id": "dopt-0a5a2c4c393c8014a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e387a7acaea0a36",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06bfa7188015aaaeb",
            "owner_id": "321371897157",
            "tags": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            },
            "tags_all": {
              "Name": "Project_VPC",
              "createdBy": "JoshuaJosephJefries"
            }
          }
        }
      ]
    }
  ]
}